--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,8 @@
 ---
 import HeaderLink from '@/components/HeaderLink'
 import TwitterIcon from '@/components/icons/TwitterIcon'
-import GithubIcon from '@/components/icons/GithubIcon'
+import LinkIcon from '@/components/icons/LinkIcon'
+import MastodonIcon from '@/components/icons/MastodonIcon'
 import MenuIcon from './icons/MenuIcon.astro'
 import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
@@ -10,15 +11,9 @@ import ToggleTheme from './ToggleTheme.astro'
 // ADD YOUR SOCIAL NETWORKS HERE
 const SOCIALNETWORKS = [
 	{
-		name: 'Github',
-		url: 'https://github.com/danielcgilibert/blog-template',
-		icon: GithubIcon
-	},
-
-	{
-		name: 'Twitter',
-		url: 'https://github.com/danielcgilibert/blog-template',
-		icon: TwitterIcon
+		name: 'Susan Silver',
+		url: 'https://susansilver.net',
+		icon: LinkIcon
 	}
 ]
 ---
