update font for headings

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -63,3 +63,12 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
 
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
+
+<!-- Pre-Load Logo Font -->
+<link
+	rel='preload'
+	href='/fonts/bebas-neue-v14-latin-regular.woff2'
+	as='font'
+	type='font/woff2'
+	crossorigin
+/>
