--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -36,7 +36,7 @@ const articleDate = pubDate.toISOString()
 						- {readTime}
 					</p>
 				</div>
-				<h1 class='text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'>
+				<h1 class='text-center text-4xl md:text-6xl md:pb-2.5 font-semibold font-display'>
 					{title}
 				</h1>
 			</div>
