--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,11 @@
 		src: url(../assets/fonts/Manrope-Regular.woff2) format('woff2');
 	}
 
+	@font-face {
+		font-family: Bebas;
+		src: url(/fonts/bebas-neue-v14-latin-regular.woff2) format('woff2');
+	}
+
 	/* prose styles here */
 	.prose h1,
 	h2,
