--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -38,7 +38,7 @@ const {
 	<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
 		<div class='flex flex-col gap-3'>
 			<div class='flex flex-col gap-2'>
-				<a class='text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
+				<a class='text-3xl -tracking-wider font-display' href={`/post/${slug}/`}>
 					{title}
 				</a>
 			</div>
