Complete writing posts and update body font

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -72,3 +72,5 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
 	type='font/woff2'
 	crossorigin
 />
+
+<link rel='preload' href='/fonts/Manrope-Regular.woff2' as='font' type='font/woff2' crossorigin />
