--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const SOCIALNETWORKS = [
 
 <header class='relative flex items-center h-12 font-semibold'>
 	<a class='text-lg mr-auto' href='/'>Home</a>
-	<a class='mx-3 flex items-center gap-1 text-lg md:text-base' href='/about'><AboutIcon /> About</a>
+	<a class='mx-3 flex items-center gap-1 text-lg' href='/about'><AboutIcon /> About</a>
 	<a class='mx-3 flex items-center gap-1 text-lg' href='/subscribe'><NewsletterIcon /> Subscribe</a>
 
 	<div
