--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,10 +23,8 @@ const SOCIALNETWORKS = [
 
 <header class='relative flex items-center h-12 font-semibold'>
 	<a class='text-lg' href='/'>Home</a>
-	<a class='mx-3 flex items-center gap-1 text-lg' href='/about'><AboutIcon /> About</a>
-	<a class='mx-3 flex items-center gap-1 text-lg mr-auto' href='/subscribe'
-		><NewsletterIcon /> Subscribe</a
-	>
+	<a class='mx-3 flex items-center gap-1 text-lg' href='/about'>About</a>
+	<a class='mx-3 flex items-center gap-1 text-lg mr-auto' href='/subscribe'>Subscribe</a>
 
 	<div
 		id='astro-header-drawer'
