--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,8 +23,7 @@ const SOCIALNETWORKS = [
 
 <header class='relative flex items-center h-12 font-semibold'>
 	<a class='text-lg' href='/'>Home</a>
-	<a class='text-lg mx-3' href='/about'>About</a>
-	<a class='text-lg mr-auto' href='/subscribe'>Subscribe</a>
+	<a class='text-lg mx-3 mr-auto' href='/about'>About</a>
 
 	<div
 		id='astro-header-drawer'
