remove cross stich

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,9 @@ const posts = await getPosts(MAX_POSTS)
 					Get a <span class='font-bold'>free list of resources</span> when you subscribe to the
 					monthly newsletter.
 				</p>
-				<p class='mt-2'>
-					This newsletter are for those intrested in following my writing. This website is my
-					portfolio and I share all my releveant articles here.
-				</p>
+				<p class='mt-2'>This newsletter are for those intrested in following my writing.</p>
+				<p>This website is my portfolio and I share all my releveant articles here.</p>
+				<p>Thank you for your support and encouragement.</p>
 			</div>
 
 			<script src='https://f.convertkit.com/ckjs/ck.5.js'></script>
