update cta newsletter

--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -62,7 +62,7 @@ const { Content, headings, remarkPluginFrontmatter } = await post.render()
 							monthly newsletter.
 						</p>
 						<p class='mt-2'>
-							This newsletter are for those intrested in following my writing. This website is my
+							This newsletter is for those intrested in following my writing. The website is my
 							portfolio and I share all my releveant articles here. Thank you for your support and
 							encouragement.
 						</p>
