add subscribe to menu

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,8 @@ const SOCIALNETWORKS = [
 
 <header class='relative flex items-center h-12 font-semibold'>
 	<a class='text-lg' href='/'>Home</a>
-	<a class='text-lg mx-3 mr-auto' href='/about'>About</a>
+	<a class='text-lg mx-3' href='/about'>About</a>
+	<a class='text-lg mr-auto' href='https://suzza.ck.page/4a324d3540'>Subscribe</a>
 
 	<div
 		id='astro-header-drawer'
