publish about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,135 @@
 ---
+import Contact from '@/components/Contact'
 import TitlePage from '@/components/TitlePage'
 import BaseLayout from '@/layouts/BaseLayout'
 ---
 
 <BaseLayout title='About'>
 	<TitlePage title='Author Suzza Silver' />
+	<main class='prose dark:prose-invert'>
+		<p>
+			I’m the writer with the mathematical muse. Educating people about math anxiety and breaking
+			the cycle of math trauma. Writing about blogging for scientists and mathematicians.
+			Encouraging them to connect with the public.
+		</p>
+		<h2>Work Experience</h2>
+
+		<p>Beauty of Mathematics</p>
+		<p>2018 - Present</p>
+		<p>Personal Blog</p>
+		<p>Writer</p>
+		<ul>
+			<li>
+				Numerous first page rankings on Google including “Mathematical Cross Stitch” and “Role of
+				Creative Play in Mathematics.”
+			</li>
+
+			<li>
+				Analytics show that readers will stay on page for 10 minutes or more and read 1,000+ word
+				articles about math.
+			</li>
+
+			<li>
+				Healthy flow of traffic from organic search only using social media for promotion and no
+				paid advertising.
+			</li>
+
+			<li>
+				Paid freelance writer for Fancy Comna publishing articles on science communications and
+				blogging.
+			</li>
+		</ul>
+
+		<p>The Social Element</p>
+		<p>2016 - 2021</p>
+		<p>Social Media Agency</p>
+		<p>Engagement Specialist</p>
+
+		<ul>
+			<li>
+				Interacted with customers of clients Diageo and Keurig Dr. Pepper to create opportunities to
+				delight as well as provide customer service.
+			</li>
+
+			<li>
+				First line of defense for crisis communications following precise directives from clients
+				which could change at a moment's notice.
+			</li>
+
+			<li>
+				Used empathy and understanding of subtext to improvise creative responses to customers that
+				were unique and not robotic.
+			</li>
+		</ul>
+		<p>TSR (Solarian Games)</p>
+		<p>2012 - 2017</p>
+		<p>Tabletop RPG & Games Publisher</p>
+		<p>Director of Community</p>
+		<ul>
+			<li>Grew Facebook page from 1,000 to 4,000 in one year.</li>
+
+			<li>
+				Used content strategy to drive community outcomes and was told by members that our community
+				was different from competitors in a positive way.
+			</li>
+
+			<li>
+				Used Pinterest to drive traffic to Facebook community page and engaged with women which made
+				up almost 30% of our members.
+			</li>
+		</ul>
+
+		<h2>Freelance Writing</h2>
+
+		<p>
+			I am transitioning from community management to science journalism. My desire is to be a
+			science writer who discusses mathematics and its history. My most recent project is an article
+			on the Wrens of Bletchley Park, the home of the Word War II codebreakers.
+		</p>
+		<h2>Testimonials</h2>
+
+		<h3>Joe Cardillo</h3>
+
+		<p>
+			“The best marketing comes from a blend of research, storytelling, positioning, and analytics,
+			and there is no more talented strategist & tactician than Suzza Silver.
+		</p>
+		<p>
+			Their work across content strategy/content operations, social media, SEO, and building online
+			communities is world-class. Suzza's approach to thinking and planning like an editor and
+			journalist is consistently powerful, and paired with intentional metrics and accessibility
+			best practices about when and where to reach audiences, there is no better strategist out
+			there”
+		</p>
+		<h3>Hessie Jones</h3>
+
+		<p>
+			“I’ve worked with Susan Silver at Arcompany where we provided big data analysis consulting
+			services as well as digital services. Susan Silver is one of a kind and someone that is quite
+			valuable when it comes to data analysis, web analysis and she is also a superior writer. The
+			content she creates as well as having a profound understanding of community makes her an asset
+			for anyone who see website and digital as a going concern. Bar none, she is someone I have
+			full confidence in to manage and develop strategies for digital marketing.“
+		</p>
+
+		<h2>My Promise</h2>
+
+		<p>
+			On this website, I feature my writing from all over the place. I also write about subjects
+			that aren’t about mathematics. It is important to me to share some advice from my experience
+			working on the internet for the past decade. Lastly, I have a library of links that I wish to
+			share with only the best resources that I’ve found. Like helpful and useful content.
+		</p>
+
+		<h2>Author Bio</h2>
+
+		<p>
+			I live on the Oregon Coast with my cat Misty. A rescue and a senior cat. I enjoy WebDev work
+			as a hobbyist. I have been building websites since the GeoCities era of the 90s. Comfortable
+			using the command line. My other hobby is cross-stitch and I’ve created my own patterns
+			inspired by mathematics.
+		</p>
+		<h2>Contact Form</h2>
+		<Contact />
+	</main>
 </BaseLayout>
