--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const SOCIALNETWORKS = [
 <header class='relative flex items-center h-12 font-semibold'>
 	<a class='text-lg' href='/'>Home</a>
 	<a class='text-lg mx-3' href='/about'>About</a>
-	<a class='text-lg mr-auto' href='https://suzza.ck.page/4a324d3540'>Subscribe</a>
+	<a class='text-lg mr-auto' href='https://www.patreon.com/susansilver'>Patreon</a>
 
 	<div
 		id='astro-header-drawer'
